--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Sites#index</h1>
-<p>Find me in app/views/sites/index.html.erb</p>
+<div class="wrapper">
+  <%= render "side_bar" %>
+  <%= render "main_chat" %>
+</div>
