--- a/app/views/sites/_main_chat.html.erb
+++ b/app/views/sites/_main_chat.html.erb
@@ -1,1 +1,7 @@
-＜チャット画面＞
+<div class="chat-header">
+  <div class="left-header">
+    <div class="header-title">
+      hogefuga
+    </div>
+  </div>
+  </div>
