--- a/app/assets/stylesheets/sites.css
+++ b/app/assets/stylesheets/sites.css
@@ -3,7 +3,7 @@
 }
 
 .side-bar {
-  background-color: #253141;
+  background-color:darkgrey;
   width: 300px;
   height: 100vh;
 }
@@ -11,24 +11,26 @@
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
-  background-color: #253141;
+  background-color: darkgrey;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid white;
 }
 
 .header-name a{
-  font-size: 16px;
+  font-size: 18px;
   color: #FAFAFA;
   text-decoration: none;
 }
 
 .create-room a {
-  font-size: 10px;
+  font-size: 16px;
   border: 1px solid lightblue;
   padding: 14px;
-  color: deepskyblue;
+  color: white;
   text-decoration: none;
+  background-color: #38aef0;
 }
 
 .rooms {
