--- a/app/views/sites/_side_bar.html.erb
+++ b/app/views/sites/_side_bar.html.erb
@@ -1,9 +1,11 @@
 <div class="side-bar-header">
   <div class="header-name">
-  <%= link_to current_user.name, edit_user_path(current_user) %>
+      <%= link_to edit_user_path(current_user) do %>
+      <%= current_user.name %>
+    <% end %>
   </div>
   <div class="create-room">
-    <a href="#">チャットを作成する</a>
+    <%= link_to "現場新規登録", new_site_path %>
   </div>
 </div>
 
