--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,48 @@
     <title>Manabepad</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  
+  <div class="wrapper">
+    <div class="side-bar">
+  <div class="side-bar-header">
+  <div class="header-name">
+      <%= link_to edit_user_path(current_user) do %>
+      <%= current_user.name %>
+    <% end %>
+  </div>
+  <div class="create-room">
+    <%= link_to "現場新規登録", new_site_path %>
+  </div>
+</div>
+
+<div class="sites">
+  <div class="site">
+    <div class="site-name">
+      <a href="#">techroom1</a>
+    </div>
+  </div>
+  <div class="site">
+    <div class="site-name">
+      <a href="#">techroom2</a>
+    </div>
+  </div>
+  </div>
+</div>
+    <div class="main">
+<div class="chat-header">
+  <div class="left-header">
+    <div class="header-title">
+      <%= link_to image_tag('logo.png' , size: '160x100'), "/" %>
+    </div>
+  </div>
+
+       <%= yield %>
+ 
   </body>
 </html>
