--- a/app/assets/stylesheets/sites.css
+++ b/app/assets/stylesheets/sites.css
@@ -1,3 +1,7 @@
+.wrapper{
+  display: flex;
+  background-color:beige
+}
 
 
 
@@ -17,14 +21,8 @@
   color: white;
 }
 
-.sites-sell-contents{
-  background-color:#fff;
-}
 
-.sites-sell-header{
-  background-color:darkgreen;
-  display: flex;
-}
+
 
 
 
@@ -139,12 +137,12 @@ select {
   margin-left: 400px;
 }
 
-.input-birth-wrap {
+.input-construcion-wrap {
   display: flex;
   flex-wrap: wrap;
 }
 
-.input-birth-wrap select {
+.input-construcion-wrap select {
   width: 75px;
   margin-top: 5px;
   height: 45px;
@@ -154,21 +152,4 @@ select {
   background: #fff;
   font-size: 12px;
   cursor: pointer;
-}
-
-.input-birth-wrap select {
-  width: 75px;
-  margin-top: 5px;
-  height: 45px;
-  padding-left: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  background: #fff;
-  font-size: 12px;
-  cursor: pointer;
-}
-
-.input-birth-wrap p {
-  line-height: 60px;
-  padding: 0 5px;
 }
