--- a/app/assets/stylesheets/sites.css
+++ b/app/assets/stylesheets/sites.css
@@ -22,7 +22,14 @@
 }
 
 
+.site-img-content {
+  position: relative;
+}
 
+.site-img {
+  width: 33vh;
+  height: 33vh;
+}
 
 
 
@@ -137,19 +144,4 @@ select {
   margin-left: 400px;
 }
 
-.input-construcion-wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
 
-.input-construcion-wrap select {
-  width: 75px;
-  margin-top: 5px;
-  height: 45px;
-  padding-left: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  background: #fff;
-  font-size: 12px;
-  cursor: pointer;
-}
