--- a/app/assets/stylesheets/sites.css
+++ b/app/assets/stylesheets/sites.css
@@ -5,32 +5,6 @@
 
 
 
-.rooms {
-  background-color: #2F3E51;
-  height: calc(100vh - 100px);
-  padding: 0 20px;
-  overflow: scroll;
-}
-
-.room {
-  padding: 20px 0 40px;
-}
-
-.room-name a {
-  text-decoration: none;
-  color: white;
-}
-
-
-.site-img-content {
-  position: relative;
-}
-
-.site-img {
-  width: 33vh;
-  height: 33vh;
-}
-
 
 
 
@@ -77,10 +51,8 @@ li {
   width: 980px;
   margin: 30px auto;
   padding: 30px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-sizing: border-box;
+
+
 }
 .chat-room-form__errors {
   margin: 30px 0;
@@ -144,4 +116,18 @@ select {
   margin-left: 400px;
 }
 
+.click-upload {
+  margin: 15px 0;
+  min-width: 250px;
+}
 
+
+
+.site {
+  padding: 10px 0 10px;
+}
+
+.site-name a {
+  text-decoration: none;
+  color: white;
+}
