--- a/app/assets/stylesheets/sites.css
+++ b/app/assets/stylesheets/sites.css
@@ -1,6 +1,6 @@
 .wrapper{
   display: flex;
-  background-color:beige
+  background-color:#f5f5f5
 }
 
 
@@ -31,8 +31,7 @@ h1 {
 
 h2 {
   margin-bottom: 10px;
-  color: #f05050;
-  font-size: 14px;
+  font-size: 20px;
 }
 
 ul {
@@ -48,11 +47,9 @@ li {
 }
 
 .chat-room-form {
-  width: 980px;
+  width: 1200px;
   margin: 30px auto;
-  padding: 30px;
-
-
+  padding: 20px;
 }
 .chat-room-form__errors {
   margin: 30px 0;
@@ -80,6 +77,7 @@ li {
   color: #fff;
   background-color: #38aef0;
   border: 0;
+  margin-left: 280px;
 }
 .chat-room-form__field {
   margin-top: 30px;
@@ -91,14 +89,15 @@ li {
 }
 .chat-room-form__field--left {
   float: left;
-  width: 30%;
+  width: 25%;
   padding-right: 20px;
   padding-left: 20px;
   box-sizing: border-box;
 }
 .chat-room-form__field--right {
-  float: right;
-  width: 70%;
+  float: left;
+  width: 60%;
+  
 }
 
 select {
@@ -123,11 +122,3 @@ select {
 
 
 
-.site {
-  padding: 10px 0 10px;
-}
-
-.site-name a {
-  text-decoration: none;
-  color: white;
-}
