--- a/app/views/sites/_header.html.erb
+++ b/app/views/sites/_header.html.erb
@@ -3,6 +3,7 @@
     <div class="left-header">
       <div class="header-title">
         <%= link_to image_tag('logo.png' , size: '200x70'), "/" %>
+        <%= link_to image_tag('Manabe Pad.png' , size: '200x70'), "/" %>
       </div>
     </div>
   
