--- a/app/views/sites/edit.erb
+++ b/app/views/sites/edit.erb
@@ -5,7 +5,7 @@
   
 
     <div class='chat-room-form'>
-     <h1>新規現場登録</h1>
+     <h1>現場編集画面</h1>
       <%=form_with model: @site, local: true do |f|%>
         <div class='chat-room-form__field'>
           <div class='chat-room-form__field--left'>
