--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -10,7 +10,7 @@
   padding-left: 10px;
   border-radius: 4px;
   border: 1px solid #ccc;
-  background: #fff;
+  background: #FFFFFF;
   font-size: 12px;
   cursor: pointer;
 }
@@ -26,15 +26,23 @@
   height: 33vh;
 }
 .site-info {
-  background-color: #FFF;
+  background-color: #FFFFFF;
   color: black;
   padding: 1vw;
   width: 33vh;
+  text-align: center;
 }
 
 .site-name {
   font-size: 2.5vh;
 
+}
+
+.side_site-name{
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-size: 500px;
+  
 }
 
 
@@ -54,12 +62,21 @@
 }
 
 .list{
-  width: 37vh;
-  list-style: none;
- margin: 0 20 50 10;
+ width: 37vh;
+ margin-right: 10px;
+}
+
+.side_list{
+  margin-bottom: 50px;
+}
+.side_list a{
+  font-size: 20px;
+  text-decoration: none;
+
+
 }
 
 .lists{
   display: flex;
-
+  list-style:none;
 }
