--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
       <h2>Edit Account</h2>
       <h5>アカウントの編集</h5>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'%>
-      <%= link_to "チャットページに戻る", :back, class: 'btn'%>
+      <%= link_to "現場一覧ページに戻る", :back, class: 'btn'%>
     </div>
     <div class='account-page__inner--right user-form'>
       <%= form_with model: current_user, local: true do |f|%>
@@ -18,6 +18,7 @@
             <%= f.text_field :name, autofocus: true%>
           </div>
         </div>
+
         <div class='field'>
           <div class='field-label'>
             <%= f.label :email%>
@@ -25,6 +26,26 @@
           <div class='field-input'>
             <%= f.email_field :email%>
           </div>
+        </div>
+
+        <div class='field'>
+          <div class='field-label'>
+            <%= f.label :user_phone %>
+          </div>
+          <div class='field-input'>
+            <%= f.text_field :user_phone %>
+          </div>
+        </div>
+
+        <div class='field'>
+          <div class='field-label'>
+            <%= f.label :occupation %>
+          </div>
+          <div class='field-input'>
+            <%= f.text_field :occupation %>
+          </div>
+        </div>
+          
         </div>
         <div class='actions'>
           <%= f.submit "Update", class: 'btn'%>
